--- a/README.en.rdoc
+++ b/README.en.rdoc
@@ -2,6 +2,14 @@
 
 This is a plugin for Redmine
 
+=== Function
+
+1.  When the issue is edited, the person in charge is set to the issue, and the state of the issue is changed to '担当' if the state of the issue is '新規'. 
+
+2.  When the issue is edited, issue is closed, the progress rate is changed to 100%.
+
+3.  When the issue is edited, those who edit it about the issue are added to the watcher of the issue.
+
 === Plugin installation
 
 1. Copy the plugin directory into the vendor/plugins directory
