--- a/README.rdoc
+++ b/README.rdoc
@@ -4,11 +4,11 @@
 
 === 機能
 
-1.  チケット更新時、チケットに担当者が設定されている && チケットの状態が'新規'の場合、チケットの状態を'担当'に変更します。
+1.  チケット更新時(チケット一括更新を除く)、チケットに担当者が設定されている && チケットの状態が'新規'の場合、チケットの状態を'担当'に変更します。
 
 2.  チケット更新時、チケットの状態がクローズされている場合、進捗を100%に変更します。
 
-3.  チケット更新時、チケットの更新したユーザをウォッチャーに追加します。
+3.  チケット更新時(チケット一括更新を除く)、チケットの更新したユーザをウォッチャーに追加します。
 
 === プラグインをインストールする
 
@@ -20,4 +20,4 @@
 
 === 注意
 
-1. このプラグインは、Redmine 0.9.0 以降でのみ動作します。
+1. 本プラグインは、Redmine 0.9.0 以降でのみ動作します。
