--- a/README.en.rdoc
+++ b/README.en.rdoc
@@ -4,11 +4,11 @@ This is a plugin for Redmine
 
 === Function
 
-1.  When the issue is edited, the person in charge is set to the issue, and the state of the issue is changed to '担当' if the state of the issue is '新規'. 
+1.  When the issue is edited, the person in charge is set to the issue, and the state of the issue is changed to '担当' if the state of the issue is '新規', except when the issue bulk edit.
 
 2.  When the issue is edited, issue is closed, the progress rate is changed to 100%.
 
-3.  When the issue is edited, those who edit it about the issue are added to the watcher of the issue.
+3.  When the issue is edited, those who edit it about the issue are added to the watcher of the issue, except when the issue bulk edit.
 
 === Plugin installation
 
