fixes #389 ????????(README?wiki)

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,11 +4,11 @@
 
 === 機能
 
-1.  チケット更新時(チケット一括更新を除く)、チケットに担当者が設定されている && チケットの状態が'新規'の場合、チケットの状態を'担当'に変更します。
+1. (チケット一括編集時を除いて)'新規'のチケットに担当者を設定すると自動的に状態を'担当'に変更します。
 
-2.  チケット更新時、チケットの状態がクローズされている場合、進捗を100%に変更します。
+2. チケットをクローズする時、自動的に進捗を100%に変更します。(0.0.2で実装予定)
 
-3.  チケット更新時(チケット一括更新を除く)、チケットの更新したユーザをウォッチャーに追加します。
+3. (チケット一括編集時を除いて)チケットを更新したユーザをウォッチャーに追加します。(0.0.2で実装予定)
 
 === プラグインをインストールする
 
