--- a/README.rdoc
+++ b/README.rdoc
@@ -6,9 +6,9 @@
 
 1. (チケット一括編集時を除いて)'新規'のチケットに担当者を設定すると自動的に状態を'担当'に変更します。
 
-2. チケットをクローズする時、自動的に進捗を100%に変更します。(0.0.2で実装予定)
+2. チケットをクローズする時、自動的に進捗を100%に変更します。
 
-3. (チケット一括編集時を除いて)チケットを更新したユーザをウォッチャーに追加します。(0.0.2で実装予定)
+3. (チケット一括編集時を除いて)チケットを更新したユーザをウォッチャーに追加します。
 
 === プラグインをインストールする
 
