--- a/README.rdoc
+++ b/README.rdoc
@@ -20,4 +20,4 @@
 
 === 注意
 
-1. 本プラグインは、Redmine 0.9.0 以降でのみ動作します。
+1. 本プラグインは、Redmine 0.9.0 以降、production mode(config.cache_classes = true)でのみ動作します。
