--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,7 @@
 
 === 機能
 
-1. (チケット一括編集時を除いて)'新規'のチケットに担当者を設定すると自動的に状態を'担当'に変更します。
+1. (チケット一括編集時を除いて)登録した遷移元ステータスのチケットに担当者を設定すると自動的に状態を遷移先ステータスに変更します。
 
 2. チケットをクローズする時、自動的に進捗を100%に変更します。
 
