--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,6 +5,8 @@ ja:
   field_old_status: 遷移元のステータス
   field_new_status: 遷移先のステータス
 
+  label_add_relation_issue: このチケットに関連するチケットを作成する。
+
   permission_manage_issue_extensions: Issue Extensionsの管理
 
   project_module_issue_extensions: Issue Extensions
