--- a/README.rdoc
+++ b/README.rdoc
@@ -22,7 +22,7 @@
 
 5. プロジェクトの設定ページのモジュールにて、Issue Extensions をチェックし、保存します。
 
-6. プロジェクトの設定ページの Issue Extensions タブを開き、遷移元/遷移先に割り当てるステータスを選択します。
+6. プロジェクトの設定ページの Issue Extensions タブを開き、ステータスを選択します。
 
 === 注意
 
