--- a/README.rdoc
+++ b/README.rdoc
@@ -4,11 +4,13 @@
 
 === 機能
 
-1. (チケット一括編集時を除いて)ステータスが登録したステータスαのチケットに担当者を設定すると自動的に登録したステータスβに変更します。
+1. チケット一括編集時を除いて、ステータスが登録したステータスαのチケットに担当者を設定すると自動的に登録したステータスβに変更します。
 
 2. チケットをクローズする時、自動的に進捗を100%に変更します。
 
-3. (チケット一括編集時を除いて)チケットを更新したユーザをウォッチャーに追加します。
+3. チケット一括編集時を除いて、チケットを更新したユーザをウォッチャーに追加します。
+
+4. 関連するチケットを簡単に作成することが出来ます。
 
 === プラグインをインストールする
 
