--- a/README.rdoc
+++ b/README.rdoc
@@ -12,6 +12,8 @@
 
 4. 関連するチケットを簡単に作成することが出来ます。
 
+5. 関連付けの際に、題名からチケットを検索することが出来ます。
+
 === プラグインをインストールする
 
 1. プラグインを vendor/plugins ディレクトリにコピーします。
