--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
   field_old_status: Alpha
   field_new_status: Beta
 
+  label_add_relation: Add related
   label_add_relation_issue: Add related this issue
   label_searched_issues: Searched issues
 
