--- a/README.rdoc
+++ b/README.rdoc
@@ -6,13 +6,15 @@
 
 1. チケット一括編集時を除いて、ステータスが登録したステータスαのチケットに担当者を設定すると自動的に登録したステータスβに変更します。
 
-2. チケットをクローズする時、自動的に進捗を100%に変更します。
+2. チケットクローズ時、自動的に進捗を100%に変更します。
 
 3. チケット一括編集時を除いて、チケットを更新したユーザをウォッチャーに追加します。
 
 4. 関連するチケットを簡単に作成することが出来ます。
 
 5. 関連付けの際に、題名からチケットを検索することが出来ます。
+
+6. チケット作成時、「自分を選ぶ」ボタンクリックによって自分自身を、担当者に設定することが出来ます。
 
 === プラグインをインストールする
 
