--- a/README.rdoc
+++ b/README.rdoc
@@ -14,7 +14,7 @@
 
 5. 関連付けの際に、題名からチケットを検索することが出来ます。
 
-6. チケット作成時、「自分を担当者にする」ボタンクリックで自分自身を担当者に設定することが出来ます。
+6. チケット作成や更新時、「自分を担当者にする」ボタンクリックで自分自身を担当者に設定することが出来ます。
 
 === プラグインをインストールする
 
