--- a/README.rdoc
+++ b/README.rdoc
@@ -16,6 +16,8 @@
 
 6. チケット作成や更新時、「自分を担当者にする」ボタンクリックで自分自身を担当者に設定することが出来ます。
 
+7. 複製するチケットを簡単に作成することが出来ます。
+
 === プラグインをインストールする
 
 1. プラグインを vendor/plugins ディレクトリにコピーします。
