--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,8 @@ ja:
   field_old_status: α
   field_new_status: β
 
+  label_add_duplicate_issue: このチケットを複製する
+
   label_add_relation: 関連付けする
   label_add_relation_issue: このチケットに関連するチケットを作成する
   label_searched_issues: ヒットしたチケット
